--- a/CLC/WebContent/layouts/commonLayout.xhtml
+++ b/CLC/WebContent/layouts/commonLayout.xhtml
@@ -3,6 +3,13 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui = "http://java.sun.com/jsf/facelets">
+	
+	<h:head>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<title><ui:insert name ="title"></ui:insert></title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"></link>
+	</h:head>
+	
 <h:body> 
    <ui:insert name = "header" >
       <ui:include src = "commonHeader.xhtml" />
