Added security features.

--- a/CLC/WebContent/layouts/commonFooter.xhtml
+++ b/CLC/WebContent/layouts/commonFooter.xhtml
@@ -5,7 +5,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 <body>
 	<ui:composition>
-	<div style="position: absolute; bottom: 0; margin: auto; width: 100%; text-align: center; background-color: black; color: orange">
+	<div style="position: sticky; bottom: 0; margin: auto; width: 100%; text-align: center; background-color: black; color: orange">
 		<h5>@Copyright Store 2021</h5>
 	</div>
 	</ui:composition>
